LPS-136418 Fix condition when the insert button appears. Vertically align and offset button. Fix RTL positioning.

--- a/modules/apps/frontend-editor/frontend-editor-ckeditor-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/frontend-editor/frontend-editor-ckeditor-web/src/main/resources/META-INF/resources/css/main.scss
@@ -65,18 +65,13 @@
 	}
 }
 
-.lfr-ballon-editor-insert-button {
-	align-items: center;
+.lfr-balloon-editor-insert-button {
 	background: white;
 	border: 0.75px solid #0b5fff;
-	border-radius: 3px;
+	border-radius: 2px;
 	color: #0b5fff;
-	display: flex;
-	flex-direction: row;
-	font-size: 1.1em;
-	font-weight: bolder;
-	height: 28px;
-	width: 28px;
+	height: 24px;
+	width: 24px;
 }
 
 .cke_toolbar {
